--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "webpack": "^4.44.0",
     "phaser": "^3.24.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
